added: authenticatin, toast, edit api keys, signup and login

--- a/views/save_credentials.ejs
+++ b/views/save_credentials.ejs
@@ -1,80 +1,65 @@
-<!DOCTYPE html>
-<html>
+<%- include('partials/header') %>
+    <%- include('partials/error') %>
+        <div class="bg-white shadow-lg">
+            <nav class="flex items-center justify-between w-full px-10 py-3 mb-4 max-w-[1800px] mx-auto">
+                <h1 class="font-bold">API Setup</h1>
+                <div class="flex items-center gap-2 font-semibold">
+                    <a href="/">Home</a>>
+                    <a href="/setup">Setup</a>>
+                    <a href="#">API Setup</a>
+                </div>
+            </nav>
+        </div>
+        <div class="px-10 flex items-center justify-center">
+            <main
+                class="max-w-[1080px] w-full p-8 flex flex-col gap-6 items-center justify-center bg-white rounded-sm shadow-lg">
+                <div class="border p-4 rounded-sm">
+                    <form action="/api/save_credentials" method="post">
+                        <h2 class="text-lg font-bold text-center">Available Keys:</h2>
+                        <ul class="flex flex-col gap-4">
+                            <li class="flex items-center justify-end gap-6">
+                                <label for="twitter_api_key">twitter_api_key</label>
+                                <input class="border rounded-sm p-1" type="password" required name="twitter_api_key">
+                            </li>
 
-<head>
-    <title>Twitter Chatbot</title>
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-</head>
-
-<body class="bg-gray-100 h-screen">
-    <div class="bg-gray-800">
-        <header class=" flex items-center justify-between w-full px-10 py-5 text-white max-w-[1800px] mx-auto">
-            <a href="/" class="">
-                <h1 class=" font-bold text-2xl">X chat-bot</h1>
-            </a>
-            <a href="/setup"
-                class="text-white text-center font-semibold shadow-md border rounded-sm bg-slate-800 hover:bg-slate-500 cursor-pointer px-4 py-2">
-                Setup account
-            </a>
-        </header>
-    </div>
-    <div class="bg-white shadow-lg">
-        <nav class="flex items-center justify-between w-full px-10 py-3 mb-4 max-w-[1800px] mx-auto">
-            <h1 class="font-bold">API Setup</h1>
-            <div class="flex items-center gap-2 font-semibold">
-                <a href="/">Home</a>>
-                <a href="/setup">Setup</a>>
-                <a href="#">API Setup</a>
-            </div>
-        </nav>
-    </div>
-    <div class="px-10 flex items-center justify-center">
-        <main
-            class="max-w-[1080px] w-full p-8 flex flex-col gap-6 items-center justify-center bg-white rounded-sm shadow-lg">
-            <div class="border p-4 rounded-sm">
-                <form action="/api/save_credentials" method="post">
-                    <h2 class="text-lg font-bold text-center">Available Keys:</h2>
-                    <ul class="flex flex-col gap-4">
-                        <li class="flex items-center justify-end gap-6">
-                            <label for="twitter_api_key">twitter_api_key</label>
-                            <input class="border rounded-sm p-1" type="password" required name="twitter_api_key">
-                        </li>
-
-                        <li class="flex items-center justify-end gap-6">
-                            <label for="twitter_api_secret">twitter_api_secret</label>
-                            <input class="border rounded-sm p-1" type="password" required name="twitter_api_secret">
-                        </li>
-                        <li class="flex items-center justify-end gap-6">
-                            <label for="twitter_access_token">twitter_access_token</label>
-                            <input class="border rounded-sm p-1" type="password" required name="twitter_access_token">
-                        </li>
-                        <li class="flex items-center justify-end gap-6">
-                            <label for="twitter_access_secret">twitter_access_secret</label>
-                            <input class="border rounded-sm p-1" type="password" required name="twitter_access_secret">
-                        </li>
-                        <li class="flex items-center justify-end gap-6">
-                            <label for="twitter_bearer_token">twitter_bearer_token</label>
-                            <input class="border rounded-sm p-1" type="password" required name="twitter_bearer_token">
-                        </li>
-                        <li class="flex items-center justify-end gap-6">
-                            <label for="groq_api_key">groq_api_key</label>
-                            <input class="border rounded-sm p-1" type="password" required name="groq_api_key">
-                        </li>
-                    </ul>
-                    <div class="flex items-center justify-center">
-                        <button type="submit"
-                            class="text-white mt-6 text-nowrap text-center font-semibold shadow-md border rounded-sm bg-slate-800 hover:bg-slate-500 cursor-pointer px-4 py-2">
-                            Save credentials </button>
-                    </div>
-                </form>
-            </div>
-        </main>
-    </div>
+                            <li class="flex items-center justify-end gap-6">
+                                <label for="twitter_api_secret">twitter_api_secret</label>
+                                <input class="border rounded-sm p-1" type="password" required name="twitter_api_secret">
+                            </li>
+                            <li class="flex items-center justify-end gap-6">
+                                <label for="twitter_access_token">twitter_access_token</label>
+                                <input class="border rounded-sm p-1" type="password" required
+                                    name="twitter_access_token">
+                            </li>
+                            <li class="flex items-center justify-end gap-6">
+                                <label for="twitter_access_secret">twitter_access_secret</label>
+                                <input class="border rounded-sm p-1" type="password" required
+                                    name="twitter_access_secret">
+                            </li>
+                            <li class="flex items-center justify-end gap-6">
+                                <label for="twitter_bearer_token">twitter_bearer_token</label>
+                                <input class="border rounded-sm p-1" type="password" required
+                                    name="twitter_bearer_token">
+                            </li>
+                            <li class="flex items-center justify-end gap-6">
+                                <label for="groq_api_key">groq_api_key</label>
+                                <input class="border rounded-sm p-1" type="password" required name="groq_api_key">
+                            </li>
+                        </ul>
+                        <div class="flex items-center justify-center">
+                            <button type="submit"
+                                class="text-white mt-6 text-nowrap text-center font-semibold shadow-md border rounded-sm bg-slate-800 hover:bg-slate-500 cursor-pointer px-4 py-2">
+                                Save credentials </button>
+                        </div>
+                    </form>
+                </div>
+            </main>
+        </div>
 
 
-    <script src="/script.js"></script>
+        <script src="/script.js"></script>
 
 
-</body>
+        </body>
 
-</html>
+        </html>
