--- a/views/test.html
+++ b/views/test.html
@@ -12,10 +12,16 @@
             <a href="/" class="">
                 <h1 class=" font-bold text-2xl">X chat-bot</h1>
             </a>
-            <a href="/setup"
-                class="text-white text-center font-semibold shadow-md border rounded-sm bg-slate-800 hover:bg-slate-500 cursor-pointer px-4 py-2">
-                Setup account
-            </a>
+            <div class="flex items-center gap-2">
+                <a href="/setup"
+                    class="text-white text-center font-semibold shadow-md border rounded-sm bg-slate-800 hover:bg-slate-500 cursor-pointer px-4 py-2">
+                    Setup account
+                </a>
+                <a href="/logout"
+                    class="text-white text-center font-semibold shadow-md border rounded-sm bg-red-400 hover:bg-red-300 cursor-pointer px-4 py-2">
+                    logout
+                </a>
+            </div>
         </header>
     </div>
     <div class="bg-white shadow-lg">
