activted the scan timeline button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,9 +51,9 @@
                     <form action="/api/get_tweet" method="post">
                         <div class="flex items-center justify-between w-full gap-3">
                             <!-- <label for="keywords">Keywords:</label> -->
-                            <input disabled class="p-2 w-full border rounded-sm" type="text" id="keywords"
-                                name="keywords" placeholder="Enter keywords (comma-separated)" required>
-                            <button type="submit" disabled
+                            <input class="p-2 w-full border rounded-sm" type="text" id="keywords" name="keywords"
+                                placeholder="Enter keywords (comma-separated)" required>
+                            <button type="submit"
                                 class="text-white text-nowrap text-center font-semibold shadow-md border rounded-sm bg-slate-800 hover:bg-slate-500 cursor-pointer px-4 py-2">
                                 Scan Timeline</button>
                         </div>
